add todo + render

--- a/index.html
+++ b/index.html
@@ -30,31 +30,11 @@
                 <input class="check-all form-check-input " type="checkbox" aria-label="check all todos">
             </div>
             <input type="text" class="input-add form-control" aria-label="add new todo">
+            <button class="button-add btn w-100 btn-light"> add new todo </button>
         </div>
 
         <ul class="todos list-group w-100">
-            <li class="todo list-group-item d-flex justify-content-between align-items-center">
-                <input class="check-todo" type="checkbox">
-                <span class="text-todo">
-                    Cras justo odioras justo odioras justo odioras justo odioras justo odioras justo odio
-                    ras justo odioras justo odioras justo odioras justo odioras justo odioras justo odio
-                    ras justo odioras justo odioras justo odioras justo odioras justo odioras justo odioras justo odio
-                    ras justo odioras justo odioras justo odioras justo odioras justo odioras justo odioras justo
-                    odioras justo odio
-                    ras justo odioras justo odioras justo odioras justo odio
-                </span>
-                <button class="delete-todo btn-close" type="button" aria-label="Close"></button>
-            </li>
-            <li class="todo list-group-item d-flex justify-content-between align-items-center">
-                <input class="check-todo" type="checkbox">
-                <span class="text-todo"> Cras justo odioras </span>
-                <button class="delete-todo btn-close  btn-close-white" type="button" aria-label="Close"></button>
-            </li>
-            <li class="todo list-group-item d-flex justify-content-between align-items-center">
-                <input class="check-todo" type="checkbox">
-                <span class="text-todo"> Cras justo odioras </span>
-                <button class="delete-todo btn-close  btn-close-white" type="button" aria-label="Close"></button>
-            </li>
+            
         </ul>
 
     </div>
