counter  +  manage check all status

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
             <button class="button-add btn w-100 btn-light"> add new todo </button>
         </div>
 
+        <h6 class="couter-todos"></h6>
+
         <ul class="todos list-group w-100">
             
         </ul>
