--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         <ul class="todos list-group w-100">
             
         </ul>
+        <button class="button-delete-completed btn w-100 btn-light"> delete completed todos </button>
+
 
     </div>
 
