pagination + active page style

--- a/index.html
+++ b/index.html
@@ -34,14 +34,10 @@
         </div>
 
         <h6 class="couter-todos"></h6>
-        <div class="tabs w-100 d-flex">
-            <button class="tab btn btn-light col" id="all-tab"> all </button>
-            <button class="tab btn btn-light col" id="active-tab"> active </button>
-            <button class="tab btn btn-light col" id="completed-tab"> completed </button>
-        </div>
-        <ul class="todos list-group w-100">
-            
-        </ul>
+        
+        <div class="tabs w-100 d-flex"></div>
+        <ul class="todos list-group w-100"></ul>
+        <ul class="pagination"></ul>
         <button class="button-delete-completed btn w-100 btn-light"> delete completed todos </button>
 
 
