--- a/index.html
+++ b/index.html
@@ -7,20 +7,19 @@
     <title>TODO CLASS vanillaJS</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link href="./style.css" rel="stylesheet" />
 </head>
 
 <body>
     <div class="d-flex row justify-content-center container m-auto">
-        <h1>Welcome to the TODO`s manager</h1>
-        <h3>
+        <h1 class="d-flex justify-content-center">Welcome to the TODO`s manager</h1>
+        <h3 class="d-flex flex-wrap justify-content-center">
             we use in the TODO
-            <a href="http://vanilla-js.com/" class="mr-2 ml-2">
-                VanillaJS
+            <a href="http://vanilla-js.com/" >
+                VanillaJS 
             </a>
             with class
             and
-            <a href="https://getbootstrap.com/" class="mr-2 ml-2">
+            <a href="https://getbootstrap.com/">
                 Bootstrap
             </a>
         </h3>
